# rt_voxels

./: CMakeLists.txt
res/: spellbook.vox
src/: common.hpp  glw.hpp  main.cpp
src/shaders/: rt.frag.glsl  rt.vert.glsl
